T02: Establish build baseline; correct current JDK to Java 8
Verified the current Spark 3.0.0 code compiles green on Java 8
(api + deeplang, 522 Scala sources) but FAILS on JDK 11 because the
codegen'd api model classes reference javax.annotation.Generated, removed
from the JDK in Java 11. Corrects the plan's current-state (Java 8, not
11 -> the real jump is Java 8 -> 17) and records the javax.annotation-api
fix for T11. Golden-output regression suite deferred: not runnable here
(disk + external cluster/rabbitmq/docker deps), so T02 marked partial.

Mark T02 partial in update.md task sheet.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>